--- a/HTML5&CSS3/transform/cubicSpin.html
+++ b/HTML5&CSS3/transform/cubicSpin.html
@@ -23,11 +23,11 @@
     .box:nth-child(4) div { background-position: calc(300%/6) 0; }
     .box:nth-child(5) div { background-position: calc(400%/6) 0; }
     .box:nth-child(6) div { background-position: calc(500%/6) 0; }
-    .box .front { background-color: red; transform: translateZ(150px); background-image: url(img/wow1.png); }
-    .box .back { background-color: purple; transform: translateZ(-150px) scale(1, -1); background-image: url(img/wow3.png); }
-    .box .above { background-color: blue; transform: translateY(-150px) rotateX(90deg); background-image: url(img/wow2.png); }
+    .box .front { background-color: red; transform: translateZ(150px); background-image: url(img/wow1.jpg); }
+    .box .back { background-color: purple; transform: translateZ(-150px) scale(1, -1); background-image: url(img/wow3.jpg); }
+    .box .above { background-color: blue; transform: translateY(-150px) rotateX(90deg); background-image: url(img/wow2.jpg); }
     .box .below { background-color: green; transform: translateY(150px) rotateX(90deg) scale(1, -1);
-        background-image: url(img/wow4.png);}
+        background-image: url(img/wow4.jpg);}
     .box .left { width: 300px; background-color: none; transform: translateX(-50px) rotateY(90deg); margin-left: -100px; }
     .box .right{ width: 300px; background-color: none; transform: translateX(50px) rotateY(90deg); margin-left: -100px; }
     </style>
